# ClusterChatServer

./: CMakeLists.txt  README.md
example/cmake/: CMakeLists.txt
example/json/example/: TestJson.cpp  test
example/muduo/: CMakeLists.txt  mserver  mserver.cc
include/: ChatServer.hpp  ChatService.hpp  Common.h  Common.hxx  UserModel.hxx
include/db/: mysql.hpp
include/middle/: mysql.hpp  redis.hpp  redismq.hpp
include/model/: FriendModel.hxx  GroupModel.hxx  OfflineMsgModel.hxx  UserModel.hxx
libs/: libpthread.so.0
proto/: base.proto  friend.proto  group.proto  message.proto  notify.proto  user.proto
src/: Application.cc  CMakeLists.txt  ChatServer.cpp  ChatService.cpp  FriendModel.cxx  OfflineMsgModel.cc  UserModel.cc
src/model/: FriendModel.cxx  GroupModel.cxx  OfflineMsgModel.cxx  UserModel.cxx
src/proto/: base.pb.cc  base.pb.h  friend.pb.cc  friend.pb.h  group.pb.cc  group.pb.h  message.pb.cc  message.pb.h  notify.pb.cc  notify.pb.h  user.pb.cc  user.pb.h
